--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.datasource.username=root
 spring.datasource.password=passw0rd
 spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
 
+#Para apontar para Azure, descomentar as linhas abaixo.
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#
+#spring.datasource.username=dev4me
+#spring.datasource.password=3ads#grupo2
+#spring.datasource.url=jdbc:sqlserver://srvdev4me.database.windows.net;databaseName=db_devme
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
