--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -7,10 +7,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
 #Para apontar para Azure, descomentar as linhas abaixo.
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#
 #spring.datasource.username=dev4me
 #spring.datasource.password=3ads#grupo2
 #spring.datasource.url=jdbc:sqlserver://srvdev4me.database.windows.net;databaseName=db_devme
+
+#Para apontar banco H2
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:login
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
