--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -18,3 +18,18 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+# Config envio smtp do gmail
+spring.mail.host=smtp.gmail.com
+
+# Por que irá utilizar o spring mail
+spring.mail.port=587
+
+# Email que ira utilzar como envio
+spring.mail.username=devfourme@gmail.com
+
+#Senha gerada nesse link: https://support.google.com/accounts/answer/185833
+spring.mail.password=xnsbkymghmhbjegs
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
