--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.username=root
-spring.datasource.password=passw0rd
-spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.datasource.username=root
+#spring.datasource.password=passw0rd
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
 
 #Para apontar para Azure, descomentar as linhas abaixo.
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.datasource.username=dev4me
-#spring.datasource.password=3ads#grupo2
-#spring.datasource.url=jdbc:sqlserver://srvdev4me.database.windows.net;databaseName=db_devme
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.username=dev4me
+spring.datasource.password=3ads#grupo2
+spring.datasource.url=jdbc:sqlserver://srvdev4me.database.windows.net;databaseName=db_devme
 
 #Para apontar banco H2
 #spring.h2.console.enabled=true
@@ -22,7 +22,7 @@ spring.jpa.hibernate.ddl-auto=none
 # Config envio smtp do gmail
 spring.mail.host=smtp.gmail.com
 
-# Por que irá utilizar o spring mail
+# Por que irï¿½ utilizar o spring mail
 spring.mail.port=587
 
 # Email que ira utilzar como envio
