--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
+#Para apontar MYSQL
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
 #spring.datasource.username=root
 #spring.datasource.password=passw0rd
 #spring.datasource.url=jdbc:mysql://localhost:3306/db_devme
