--- a/Site/package.json
+++ b/Site/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.13",
+    "sweetalert2-react-content": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
