--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -29,10 +29,10 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Envio de email via SES AWS
-spring.mail.host=email-smtp.us-east-1.amazonaws.com
-spring.mail.port=587
-spring.mail.username=AKIA5D7543TRWTFQ4A7R
-spring.mail.password=BHGJ3L71Bqp5Gvm6Nn3NpNjvesKfvQe0cx5+7hXUWVSX
+#spring.mail.host=email-smtp.us-east-1.amazonaws.com
+#spring.mail.port=587
+#spring.mail.username=AKIA5D7543TRWTFQ4A7R
+#spring.mail.password=BHGJ3L71Bqp5Gvm6Nn3NpNjvesKfvQe0cx5+7hXUWVSX
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
