--- a/Java/java-login-jpa/src/main/resources/application.yml
+++ b/Java/java-login-jpa/src/main/resources/application.yml
@@ -6,5 +6,5 @@ cloud:
     stack:
       auto: false
     credentials:
-      access-key: AKIA5D7543TR7U6ZB6XO
-      secret-key: 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
+      access-key: {rootKey.csv}
+      secret-key: {rootKey.csv}
