--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "private": "true",
     "scripts": {
-        "start": "node ./site/app.js",
+        "start": "node ./site/src/app.js",
         "postinstall": "npm install"
     }
 }
