--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "private": "true",
     "scripts": {
         "start": "node ./site/src/app.js",
-        "postinstall": "npm install"
+        "postinstall": "cd site && npm install"
     }
 }
