--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "site",
+    "name": "dev4me",
     "version": "0.0.1",
     "private": "true",
     "scripts": {
         "start": "node ./site/src/app.js",
-        "postinstall": "cd site && npm install"
+        "postinstall": "cd ./site && npm install"
     }
 }
