--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "private": "true",
     "scripts": {
-        "start": "node ./site/src/app.js",
-        "postinstall": "cd ./site/src && npm install"
+        "start": "node ./Site/src/app.js",
+        "postinstall": "cd Site && npm install"
     }
 }
