--- a/Java/java-login-jpa/src/main/resources/application.yml
+++ b/Java/java-login-jpa/src/main/resources/application.yml
@@ -6,5 +6,5 @@ cloud:
     stack:
       auto: false
     credentials:
-      access-key: {rootKey.csv}
-      secret-key: {rootKey.csv}
+      access-key: AKIA5D7543TRV4VSKHFL
+      secret-key: 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
