Subindo testes pt3

--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -31,14 +31,8 @@ spring.jpa.hibernate.ddl-auto=none
 #Envio de email via SES AWS
 spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=587
-spring.mail.username={credentials.csv}
-spring.mail.password={credentials.csv}
-
-#access-key: AKIA5D7543TRV4VSKHFL
-#secret-key: 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
-
-#spring.mail.username=AKIA5D7543TR7UT7I3MK
-#spring.mail.password=BCmI4OXZMeCoNMGdihcJvPpu117b6X1+9BpxZ282CZpA
+spring.mail.username=
+spring.mail.password=
 
 
 spring.mail.properties.mail.smtp.auth=true
