--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -31,8 +31,8 @@ spring.jpa.hibernate.ddl-auto=none
 #Envio de email via SES AWS
 spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=AKIA5D7543TR6HFNYNG7
+spring.mail.password=BKQptWqRXN9wG+Jfo6bkniFjScLevBpXivKHctHgV2ZP
 
 
 spring.mail.properties.mail.smtp.auth=true
