--- a/Java/java-login-jpa/src/main/resources/application.yml
+++ b/Java/java-login-jpa/src/main/resources/application.yml
@@ -6,5 +6,5 @@ cloud:
     stack:
       auto: false
     credentials:
-      access-key:
-      secret-key:
+      access-key: AKIA5D7543TRV2PAI4LL
+      secret-key: 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
