--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -37,3 +37,10 @@ spring.mail.password=BKQptWqRXN9wG+Jfo6bkniFjScLevBpXivKHctHgV2ZP
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port: 8443
+security.require-ssl=true
+server.ssl.key-store:/etc/letsencrypt/live/dev4me.dds.net/keystore.p12
+server.ssl.key-store-password: password
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
