--- a/Java/java-login-jpa/src/main/resources/application.properties
+++ b/Java/java-login-jpa/src/main/resources/application.properties
@@ -38,9 +38,9 @@ spring.mail.password=BKQptWqRXN9wG+Jfo6bkniFjScLevBpXivKHctHgV2ZP
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port: 8443
+server.port: 8080
 security.require-ssl=true
-server.ssl.key-store:/keystore.p12
+server.ssl.key-store:classpath:keystore.p12
 server.ssl.key-store-password: password
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
