--- a/Site/package.json
+++ b/Site/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=./certificado.pem SSL_KEY_FILE=chave.pem react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./fullchain.pem SSL_KEY_FILE=privkey.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
